<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSettings">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="25sp"
        android:textSize="25sp"
        android:text="Email:" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:padding="25sp"
        android:textSize="30sp"
        android:text="Days of Reminder"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="25sp"
        android:textSize="25sp"
        android:text="Test:" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:padding="25sp"
        android:textSize="25sp"
        android:text="Assignment:" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:padding="25sp"
        android:textSize="25sp"
        android:text="Reading:" />

    <EditText
        android:id="@+id/editTestDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:ems="7"
        android:hint="Enter a number"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editAssignmentDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:ems="7"
        android:hint="Enter a number"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editReadingDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:ems="7"
        android:hint="Enter a number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:ems="8"
        android:textSize="20sp"
        android:hint="Enter email address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="30sp"
        android:textSize="25sp"
        android:text="Quiz:" />

    <EditText
        android:id="@+id/editQuizDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:hint="Enter a number"
        android:inputType="number"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <Button
            android:id="@+id/btn_save_settings"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Save"
            android:textSize="25sp" />
    </RelativeLayout>
</android.widget.GridLayout>