<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourse"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:paddingLeft="25sp">
        <TextView
            android:id="@+id/tv_course_title"
            android:text="Title:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/et_course_title"
            android:layout_width="200sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:paddingLeft="25sp">
        <TextView
            android:text="Professor:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textSize="25sp"
            android:layout_row="1"/>
        <EditText
            android:id="@+id/et_course_prof"
            android:layout_width="200sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:textSize="25sp"
            android:backgroundTint="@color/colorAccent"
            android:textAlignment="center"
            android:id="@+id/btn_course_submit"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal|center"
            android:text="Submit"/>
    </RelativeLayout>
</LinearLayout>