<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_edit_settings"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:text="@string/edit_settings" />
    </RelativeLayout>
</LinearLayout>